# flycast

./: .cirrus.yml  .clang-format  .clang-format-ignore  .cproject  .gitignore  .gitlab-ci.yml  .gitmodules  .project  .travis.yml  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  Dartho.txt  README.md  aaa  appveyor.yml  bitrise.yml  build.bat  build.sh  crowdin.yml  debug.keystore.enc  gdxsv-format.sh  issue_template.md  p.patch  run.py  vcpkg.json  wercker.yml
core/hw/: CMakeLists.txt  hwreg.h
core/hw/aica/: CMakeLists.txt  aica.cpp  aica.h  aica_if.cpp  aica_if.h  aica_mem.cpp  aica_mem.h  dsp.cpp  dsp.h  dsp_arm32.cpp  dsp_arm64.cpp  dsp_interp.cpp  dsp_x64.cpp  dsp_x86.cpp  sgc_if.cpp  sgc_if.h
core/hw/arm7/: CMakeLists.txt  arm-new.h  arm64.cpp  arm7.cpp  arm7.h  arm7_rec.cpp  arm7_rec.h  arm7_rec_arm32.cpp  arm7_rec_arm64.cpp  arm7_rec_x64.cpp  arm7_x64_msvc.asm  arm_mem.cpp  arm_mem.h  vbaARM.cpp  virt_arm.cpp  virt_arm.h
core/hw/bba/: CMakeLists.txt  bba.cpp  bba.h  rtl8139c.cpp  rtl8139c.h
core/hw/flashrom/: CMakeLists.txt  at93cxx.cpp  at93cxx.h  flashrom.cpp  flashrom.h  nvmem.cpp  nvmem.h  x76f100.cpp  x76f100.h
core/hw/gdrom/: CMakeLists.txt  README.md  gdrom_if.h  gdrom_response.cpp  gdromv3.cpp  gdromv3.h
core/hw/holly/: CMakeLists.txt  holly_intc.cpp  holly_intc.h  sb.cpp  sb.h  sb_mem.cpp  sb_mem.h
core/hw/maple/: CMakeLists.txt  maple_cfg.cpp  maple_cfg.h  maple_devs.cpp  maple_devs.h  maple_devsCURRENT.cpp  maple_helper.cpp  maple_helper.h  maple_if.cpp  maple_if.h  maple_jvs.cpp
core/hw/mem/: CMakeLists.txt  _vmem.cpp  _vmem.h  addrspace.cpp  addrspace.h  mem_watch.cpp  mem_watch.h  vmem32.cpp  vmem32.h
core/hw/modem/: CMakeLists.txt  README.md  dns.cpp  internal.h  miniupnp.cpp  miniupnp.h  modem.cpp  modem.h  modem_regs.h  net_platform.h  picoppp.cpp  picoppp.h  pppd.cpp  pppd.h  v42.cpp  v42.h  v42bis.cpp  v42bis.h
core/hw/naomi/: CMakeLists.txt  atomiswave.cpp  atomiswave.h  awave_regs.h  awcartridge.cpp  awcartridge.h  card_reader.cpp  card_reader.h  decrypt.cpp  decrypt.h  dinokich.cpp  dinokich.h  dinokich_card.cpp  dinokich_card.h  gdcartridge.cpp  gdcartridge.h  hopper.cpp  hopper.h  m1cartridge.cpp  m1cartridge.h  m4cartridge.cpp  m4cartridge.h  midiffb.cpp  midiffb.h  multiboard.cpp  multiboard.h  naomi.cpp  naomi.h  naomi_cart.cpp  naomi_cart.h  naomi_flashrom.cpp  naomi_flashrom.h  naomi_m3comm.cpp  naomi_m3comm.h  naomi_regs.h  naomi_roms.cpp  naomi_roms.h  naomi_roms_eeprom.h  naomi_roms_input.h  netdimm.cpp  (+7 more)
core/hw/pvr/: CMakeLists.txt  Renderer_if.cpp  Renderer_if.h  config.h  drkPvr.cpp  drkPvr.h  elan.cpp  elan.h  elan_struct.h  helper_classes.h  pvr.cpp  pvr.h  pvr_mem.cpp  pvr_mem.h  pvr_regs.cpp  pvr_regs.h  pvr_sb_regs.cpp  pvr_sb_regs.h  spg.cpp  spg.h  ta.cpp  ta.h  ta_const_df.h  ta_ctx.cpp  ta_ctx.h  ta_structs.h  ta_util.cpp  ta_vtx.cpp
core/hw/sh4/: CMakeLists.txt  arm64_simd.h  sh4_cache.h  sh4_core.h  sh4_core_regs.cpp  sh4_cycles.cpp  sh4_cycles.h  sh4_if.h  sh4_interpreter.h  sh4_interrupts.cpp  sh4_interrupts.h  sh4_mem.cpp  sh4_mem.h  sh4_mmr.cpp  sh4_mmr.h  sh4_opcode_list.cpp  sh4_opcode_list.h  sh4_rom.cpp  sh4_sched.cpp  sh4_sched.h  storeq.cpp
core/rend/: CMakeLists.txt  CustomTexture.cpp  CustomTexture.h  IconsFontAwesome6.h  TexCache.cpp  TexCache.h  game_scanner.h  gui.cpp  gui.h  gui_achievements.cpp  gui_achievements.h  gui_android.cpp  gui_android.h  gui_chat.h  gui_cheats.cpp  gui_debugger.cpp  gui_debugger.h  gui_util.cpp  gui_util.h  imgui_driver.cpp  imgui_driver.h  mainui.cpp  mainui.h  osd.cpp  osd.h  rend.h  shader_util.h  sleep.cpp  sleep.h  sorter.cpp  sorter.h  texconv.cpp  texconv.h  tileclip.h  transform_matrix.cpp  transform_matrix.h
core/rend/boxart/: boxart.cpp  boxart.h  gamesdb.cpp  gamesdb.h  http_client.cpp  http_client.h  pvrparser.h  scraper.cpp  scraper.h
core/rend/custom_texture/: CustomTextureTypes.cpp  CustomTextureTypes.h  TextureTranscoder.cpp  TextureTranscoder.h
core/rend/d3d11/: d3d11.cpp
core/rend/dx11/: CMakeLists.txt  dx11_driver.h  dx11_naomi2.cpp  dx11_naomi2.h  dx11_overlay.cpp  dx11_overlay.h  dx11_quad.h  dx11_renderer.cpp  dx11_renderer.h  dx11_renderstate.cpp  dx11_renderstate.h  dx11_shaders.cpp  dx11_shaders.h  dx11_texture.cpp  dx11_texture.h  dx11context.cpp  dx11context.h  dx11context_lr.cpp  dx11context_lr.h  imgui_impl_dx11.cpp  imgui_impl_dx11.h
core/rend/dx9/: CMakeLists.txt  comptr.h  d3d_overlay.cpp  d3d_overlay.h  d3d_renderer.cpp  d3d_renderer.h  d3d_shaders.cpp  d3d_shaders.h  d3d_texture.cpp  d3d_texture.h  dx9_driver.h  dxcontext.cpp  dxcontext.h  imgui_impl_dx9.cpp
core/rend/gl4/: CMakeLists.txt  abuffer.cpp  gl4.h  gl4naomi2.cpp  gl4naomi2.h  gldraw.cpp  gles.cpp  glsl.h  gltex.cpp  naomi2.cpp  naomi2.h
core/rend/gles/: CMakeLists.txt  CustomTexture.cpp  CustomTexture.h  gl32funcs.c  gl32funcs.h  glcache.h  gldraw.cpp  gles.cpp  gles.h  gltex.cpp  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  naomi2.cpp  naomi2.h  opengl_driver.cpp  opengl_driver.h  postprocess.cpp  postprocess.h  quad.cpp  quad.h
core/rend/metal/: metal.h  metal_buffer.cpp  metal_buffer.h  metal_buffer.mm  metal_commandpool.h  metal_commandpool.mm  metal_context.cpp  metal_context.h  metal_context.mm  metal_drawer.h  metal_drawer.mm  metal_driver.cpp  metal_driver.h  metal_pipeline.cpp  metal_pipeline.h  metal_pipeline.mm  metal_quad.h  metal_quad.mm  metal_renderer.cpp  metal_renderer.h  metal_renderer.mm  metal_shaders.cpp  metal_shaders.h  metal_shaders.mm  metal_texture.cpp  metal_texture.h  metal_texture.mm
core/rend/norend/: norend.cpp
fonts/: CMakeLists.txt  biosfont.cpp  biosfontpng.cpp  fontutil.cpp  fontutil.h  maketestpages.cpp  printerfont.cpp
tests/: CMakeLists.txt  macos_clang_toolchain.cmake  test.sh
tests/inc/: test_utils.h
tests/src/: AicaArmTest.cpp  CheatManagerTest.cpp  ConfigFileTest.cpp  HttpTest.cpp  IniFileTest.cpp  JitlessDynarecTest.cpp  MmuTest.cpp  Sh4InterpreterTest.cpp  div32_test.cpp  gtest_bootstrap.cpp  gtest_main_entry.cpp  http_stubs.cpp  osx_shims.mm  serialize_test.cpp  sh4_ops.h  test_stubs.cpp
(+1496 files in other folders)
